@@ -18,6 +18,7 @@
 package org.apache.ignite.configuration.processor.internal;
 
 import com.squareup.javapoet.AnnotationSpec;
+import com.squareup.javapoet.ArrayTypeName;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
 import com.squareup.javapoet.FieldSpec;
@@ -26,24 +27,18 @@ import com.squareup.javapoet.MethodSpec;
 import com.squareup.javapoet.ParameterizedTypeName;
 import com.squareup.javapoet.TypeName;
 import com.squareup.javapoet.TypeSpec;
+import com.squareup.javapoet.TypeVariableName;
 import com.squareup.javapoet.WildcardTypeName;
 import java.io.IOException;
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.MethodType;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Deque;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.Filer;
 import javax.annotation.processing.ProcessingEnvironment;
@@ -55,28 +50,28 @@ import javax.lang.model.element.Modifier;
 import javax.lang.model.element.PackageElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.VariableElement;
+import javax.lang.model.type.MirroredTypesException;
+import javax.lang.model.type.TypeMirror;
 import javax.lang.model.util.Elements;
+import org.apache.ignite.configuration.ConfigurationChanger;
+import org.apache.ignite.configuration.ConfigurationRegistry;
 import org.apache.ignite.configuration.ConfigurationTree;
 import org.apache.ignite.configuration.ConfigurationValue;
-import org.apache.ignite.configuration.Configurator;
 import org.apache.ignite.configuration.RootKey;
 import org.apache.ignite.configuration.annotation.Config;
 import org.apache.ignite.configuration.annotation.ConfigValue;
+import org.apache.ignite.configuration.annotation.ConfigurationRoot;
 import org.apache.ignite.configuration.annotation.NamedConfigValue;
 import org.apache.ignite.configuration.annotation.Value;
 import org.apache.ignite.configuration.internal.DynamicConfiguration;
 import org.apache.ignite.configuration.internal.DynamicProperty;
 import org.apache.ignite.configuration.internal.NamedListConfiguration;
-import org.apache.ignite.configuration.internal.selector.BaseSelectors;
-import org.apache.ignite.configuration.internal.selector.Selector;
-import org.apache.ignite.configuration.internal.validation.MemberKey;
-import org.apache.ignite.configuration.processor.internal.pojo.ChangeClassGenerator;
-import org.apache.ignite.configuration.processor.internal.pojo.InitClassGenerator;
-import org.apache.ignite.configuration.processor.internal.pojo.ViewClassGenerator;
 import org.apache.ignite.configuration.processor.internal.validation.ValidationGenerator;
+import org.apache.ignite.configuration.tree.ConfigurationSource;
 import org.apache.ignite.configuration.tree.ConfigurationVisitor;
 import org.apache.ignite.configuration.tree.InnerNode;
 import org.apache.ignite.configuration.tree.NamedListChange;
+import org.apache.ignite.configuration.tree.NamedListInit;
 import org.apache.ignite.configuration.tree.NamedListNode;
 import org.apache.ignite.configuration.tree.NamedListView;
 
@@ -96,23 +91,6 @@ public class Processor extends AbstractProcessor {
     /** Wildcard (?) TypeName. */
     private static final TypeName WILDCARD = WildcardTypeName.subtypeOf(Object.class);
 
-    /** Type of Configurator (every DynamicConfiguration has a Configurator field). */
-    private static final ParameterizedTypeName CONFIGURATOR_TYPE = ParameterizedTypeName.get(
-        ClassName.get(Configurator.class),
-        WildcardTypeName.subtypeOf(
-            ParameterizedTypeName.get(ClassName.get(DynamicConfiguration.class), WILDCARD, WILDCARD, WILDCARD)
-        )
-    );
-
-    /** Generator of VIEW classes. */
-    private ViewClassGenerator viewClassGenerator;
-
-    /** Generator of INIT classes. */
-    private InitClassGenerator initClassGenerator;
-
-    /** Generator of CHANGE classes. */
-    private ChangeClassGenerator changeClassGenerator;
-
     /** Class file writer. */
     private Filer filer;
 
@@ -127,9 +105,6 @@ public class Processor extends AbstractProcessor {
         super.init(processingEnv);
 
         filer = processingEnv.getFiler();
-        viewClassGenerator = new ViewClassGenerator(processingEnv);
-        initClassGenerator = new InitClassGenerator(processingEnv);
-        changeClassGenerator = new ChangeClassGenerator(processingEnv);
     }
 
     /** {@inheritDoc} */
@@ -140,14 +115,12 @@ public class Processor extends AbstractProcessor {
 
         List<ConfigurationDescription> roots = new ArrayList<>();
 
-        // Package to use for Selectors and Keys classes
-        String packageForUtil = "";
-
         // All classes annotated with @Config
-        final Set<TypeElement> annotatedConfigs = roundEnvironment.getElementsAnnotatedWith(Config.class).stream()
+        final List<TypeElement> annotatedConfigs = roundEnvironment
+            .getElementsAnnotatedWithAny(Set.of(ConfigurationRoot.class, Config.class)).stream()
             .filter(element -> element.getKind() == ElementKind.CLASS)
             .map(TypeElement.class::cast)
-            .collect(Collectors.toSet());
+            .collect(Collectors.toList());
 
         if (annotatedConfigs.isEmpty())
             return false;
@@ -163,12 +136,13 @@ public class Processor extends AbstractProcessor {
                 .map(VariableElement.class::cast)
                 .collect(Collectors.toList());
 
-            final Config classConfigAnnotation = clazz.getAnnotation(Config.class);
+            ConfigurationRoot rootAnnotation = clazz.getAnnotation(ConfigurationRoot.class);
 
-            // Configuration name
-            final String configName = classConfigAnnotation.value();
             // Is root of the configuration
-            final boolean isRoot = classConfigAnnotation.root();
+            final boolean isRoot = rootAnnotation != null;
+            // Configuration name
+            final String configName = isRoot ? rootAnnotation.rootName() : null;
+
             final ClassName schemaClassName = ClassName.get(packageName, clazz.getSimpleName().toString());
 
             // Get name for generated configuration class and it's interface
@@ -184,10 +158,8 @@ public class Processor extends AbstractProcessor {
             );
 
             // If root, then use it's package as package for Selectors and Keys
-            if (isRoot) {
+            if (isRoot)
                 roots.add(configDesc);
-                packageForUtil = packageName;
-            }
 
             TypeSpec.Builder configurationClassBuilder = TypeSpec.classBuilder(configClass)
                 .addSuperinterface(configInterface)
@@ -197,7 +169,6 @@ public class Processor extends AbstractProcessor {
                 .addModifiers(PUBLIC);
 
             CodeBlock.Builder constructorBodyBuilder = CodeBlock.builder();
-            CodeBlock.Builder copyConstructorBodyBuilder = CodeBlock.builder();
 
             for (VariableElement field : fields) {
                 Element fieldTypeElement = processingEnv.getTypeUtils().asElement(field.asType());
@@ -233,10 +204,7 @@ public class Processor extends AbstractProcessor {
                     configurationClassBuilder.addField(nestedConfigField);
 
                     // Constructor statement
-                    constructorBodyBuilder.addStatement("add($L = new $T(qualifiedName, $S, false, configurator, this.root))", fieldName, getMethodType, fieldName);
-
-                    // Copy constructor statement
-                    copyConstructorBodyBuilder.addStatement("add($L = base.$L.copy(this.root))", fieldName, fieldName);
+                    constructorBodyBuilder.addStatement("add($L = new $T(keys, $S, rootKey, changer))", fieldName, getMethodType, fieldName);
                 }
 
                 final NamedConfigValue namedConfigAnnotation = field.getAnnotation(NamedConfigValue.class);
@@ -262,32 +230,23 @@ public class Processor extends AbstractProcessor {
 
                     // Constructor statement
                     constructorBodyBuilder.addStatement(
-                        "add($L = new $T(qualifiedName, $S, configurator, this.root, (p, k) -> new $T(p, k, true, configurator, this.root)))",
+                        "add($L = new $T(keys, $S, rootKey, changer, (p, k) -> new $T(p, k, rootKey, changer)))",
                         fieldName,
                         getMethodType,
                         fieldName,
                         fieldType
                     );
-
-                    // Copy constructor statement
-                    copyConstructorBodyBuilder.addStatement("add($L = base.$L.copy(this.root))", fieldName, fieldName);
                 }
 
                 final Value valueAnnotation = field.getAnnotation(Value.class);
                 if (valueAnnotation != null) {
-                    switch (baseType.toString()) {
-                        case "boolean":
-                        case "int":
-                        case "long":
-                        case "double":
-                        case "java.lang.String":
-                            break;
-
-                        default:
-                            throw new ProcessorException(
-                                "@Value " + clazz.getQualifiedName() + "." + field.getSimpleName() + " field must" +
-                                    " have one of the following types: boolean, int, long, double, String."
-                            );
+                    // Must be a primitive or an array of the primitives (including java.lang.String)
+                    if (!isPrimitiveOrArrayOfPrimitives(baseType)) {
+                        throw new ProcessorException(
+                            "@Value " + clazz.getQualifiedName() + "." + field.getSimpleName() + " field must" +
+                                " have one of the following types: boolean, int, long, double, String or an array of " +
+                                "aforementioned type."
+                        );
                     }
 
                     // Create value (DynamicProperty<>) field
@@ -299,63 +258,42 @@ public class Processor extends AbstractProcessor {
 
                     // Constructor statement
                     constructorBodyBuilder.addStatement(
-                        "add($L = new $T(qualifiedName, $S, new $T($T.class, $S), this.configurator, this.root), $L)",
-                        fieldName, getMethodType, fieldName, MemberKey.class, configClass, fieldName, validatorsBlock
+                        "add($L = new $T(keys, $S, rootKey, changer), $L)",
+                        fieldName, getMethodType, fieldName, validatorsBlock
                     );
-
-                    // Copy constructor statement
-                    copyConstructorBodyBuilder.addStatement("add($L = base.$L.copy(this.root))", fieldName, fieldName);
                 }
 
                 configDesc.getFields().add(new ConfigurationElement(getMethodType, fieldName, viewClassType, initClassType, changeClassType));
 
-                createGettersAndSetter(configurationClassBuilder, configurationInterfaceBuilder, fieldName, types, valueAnnotation);
+                createGetters(configurationClassBuilder, configurationInterfaceBuilder, fieldName, types);
             }
 
             props.put(configClass, configDesc);
 
             // Create VIEW, INIT and CHANGE classes
-            createPojoBindings(packageName, fields, schemaClassName, configurationClassBuilder, configurationInterfaceBuilder);
+            createPojoBindings(fields, schemaClassName, configurationClassBuilder, configurationInterfaceBuilder);
 
-            if (isRoot)
-                createRootKeyField(configInterface, configurationInterfaceBuilder, configDesc);
+            if (isRoot) {
+                TypeMirror storageType = null;
+
+                try {
+                    rootAnnotation.storage();
+                }
+                catch (MirroredTypesException e) {
+                    storageType = e.getTypeMirrors().get(0);
+                }
+
+                createRootKeyField(configInterface, configurationInterfaceBuilder, configDesc, storageType, schemaClassName);
+            }
 
             // Create constructors for configuration class
-            createConstructors(configClass, configName, configurationClassBuilder, CONFIGURATOR_TYPE, constructorBodyBuilder, copyConstructorBodyBuilder);
-
-            // Create copy method for configuration class
-            createCopyMethod(configClass, configurationClassBuilder);
+            createConstructors(configurationClassBuilder, constructorBodyBuilder);
 
             // Write configuration interface
-            JavaFile interfaceFile = JavaFile.builder(packageName, configurationInterfaceBuilder.build()).build();
+            buildClass(packageName, configurationInterfaceBuilder.build());
 
-            try {
-                interfaceFile.writeTo(filer);
-            } catch (IOException e) {
-                throw new ProcessorException("Failed to create configuration class " + configClass.toString(), e);
-            }
-
-            // Write configuration
-            JavaFile classFile = JavaFile.builder(packageName, configurationClassBuilder.build()).build();
-
-            try {
-                classFile.writeTo(filer);
-            } catch (IOException e) {
-                throw new ProcessorException("Failed to create configuration class " + configClass.toString(), e);
-            }
+            buildClass(packageName, configurationClassBuilder.build());
         }
-
-        // Get all generated configuration nodes
-        final List<ConfigurationNode> flattenConfig = roots.stream()
-            .map((ConfigurationDescription cfg) -> buildConfigForest(cfg, props))
-            .flatMap(Set::stream)
-            .collect(Collectors.toList());
-
-        // Generate Keys class
-        createKeysClass(packageForUtil, flattenConfig);
-
-        // Generate Selectors class
-        createSelectorsClass(packageForUtil, flattenConfig);
 
         return true;
     }
@@ -363,43 +301,39 @@ public class Processor extends AbstractProcessor {
     /** */
     private void createRootKeyField(ClassName configInterface,
         TypeSpec.Builder configurationClassBuilder,
-        ConfigurationDescription configDesc) {
-
+        ConfigurationDescription configDesc,
+        TypeMirror storageType,
+        ClassName schemaClassName
+    ) {
         ParameterizedTypeName fieldTypeName = ParameterizedTypeName.get(ClassName.get(RootKey.class), configInterface);
 
-        TypeSpec anonymousClass = TypeSpec.anonymousClassBuilder("")
-            .addSuperinterface(fieldTypeName)
-            .addMethod(MethodSpec
-                .methodBuilder("key")
-                .addAnnotation(Override.class)
-                .addModifiers(PUBLIC)
-                .returns(TypeName.get(String.class))
-                .addStatement("return $S", configDesc.getName())
-                .build()).build();
+        ClassName nodeClassName = Utils.getNodeName(schemaClassName);
 
         FieldSpec keyField = FieldSpec.builder(
             fieldTypeName, "KEY", PUBLIC, STATIC, FINAL)
-            .initializer("$L", anonymousClass)
+            .initializer(
+                "$T.newRootKey($S, $T.class, $T::new, (rootKey, changer) -> new $T($T.emptyList(), $S, rootKey, changer))",
+                ConfigurationRegistry.class, configDesc.getName(), storageType, nodeClassName,
+                Utils.getConfigurationName(schemaClassName), Collections.class, configDesc.getName()
+            )
             .build();
 
         configurationClassBuilder.addField(keyField);
     }
 
     /**
-     * Create getters and setters for configuration class.
+     * Create getters for configuration class.
      *
      * @param configurationClassBuilder
      * @param configurationInterfaceBuilder
      * @param fieldName
      * @param types
-     * @param valueAnnotation
      */
-    private void createGettersAndSetter(
+    private void createGetters(
         TypeSpec.Builder configurationClassBuilder,
         TypeSpec.Builder configurationInterfaceBuilder,
         String fieldName,
-        ConfigurationFieldTypes types,
-        Value valueAnnotation
+        ConfigurationFieldTypes types
     ) {
         MethodSpec interfaceGetMethod = MethodSpec.methodBuilder(fieldName)
             .addModifiers(PUBLIC, ABSTRACT)
@@ -408,21 +342,13 @@ public class Processor extends AbstractProcessor {
         configurationInterfaceBuilder.addMethod(interfaceGetMethod);
 
         MethodSpec getMethod = MethodSpec.methodBuilder(fieldName)
+            .addAnnotation(Override.class)
+            .addJavadoc("{@inheritDoc}")
             .addModifiers(PUBLIC, FINAL)
             .returns(types.getGetMethodType())
             .addStatement("return $L", fieldName)
             .build();
         configurationClassBuilder.addMethod(getMethod);
-
-        if (valueAnnotation != null) {
-            MethodSpec setMethod = MethodSpec
-                .methodBuilder(fieldName)
-                .addModifiers(PUBLIC, FINAL)
-                .addParameter(types.getUnwrappedType(), fieldName)
-                .addStatement("this.$L.change($L)", fieldName, fieldName)
-                .build();
-            configurationClassBuilder.addMethod(setMethod);
-        }
     }
 
     /**
@@ -455,13 +381,15 @@ public class Processor extends AbstractProcessor {
         final NamedConfigValue namedConfigAnnotation = field.getAnnotation(NamedConfigValue.class);
         if (namedConfigAnnotation != null) {
             ClassName fieldType = Utils.getConfigurationName((ClassName) baseType);
+            //TODO IGNITE-14182 This is BS, interface name must be used instead.
+            ClassName interfaceFieldType = Utils.getConfigurationName((ClassName) baseType);
 
             viewClassType = Utils.getViewName((ClassName) baseType);
             initClassType = Utils.getInitName((ClassName) baseType);
             changeClassType = Utils.getChangeName((ClassName) baseType);
 
             getMethodType = ParameterizedTypeName.get(ClassName.get(NamedListConfiguration.class), viewClassType, fieldType, initClassType, changeClassType);
-            interfaceGetMethodType = ParameterizedTypeName.get(ClassName.get(NamedListConfiguration.class), viewClassType, fieldType, initClassType, changeClassType);
+            interfaceGetMethodType = ParameterizedTypeName.get(ClassName.get(NamedListConfiguration.class), viewClassType, interfaceFieldType, initClassType, changeClassType);
         }
 
         final Value valueAnnotation = field.getAnnotation(Value.class);
@@ -545,234 +473,36 @@ public class Processor extends AbstractProcessor {
     }
 
     /**
-     * Create copy-method for configuration class.
-     *
-     * @param configClass Configuration class name.
-     * @param configurationClassBuilder Configuration class builder.
-     */
-    private void createCopyMethod(ClassName configClass, TypeSpec.Builder configurationClassBuilder) {
-        MethodSpec copyMethod = MethodSpec.methodBuilder("copy")
-            .addAnnotation(Override.class)
-            .addModifiers(PUBLIC)
-            .addParameter(DynamicConfiguration.class, "root")
-            .returns(configClass)
-            .addStatement("return new $T(this, root)", configClass)
-            .build();
-
-        configurationClassBuilder.addMethod(copyMethod);
-    }
-
-    /**
      * Create configuration class constructors.
      *
-     * @param configClass Configuration class name.
-     * @param configName Configuration name.
-     * @param configurationClassBuilder Configuration class builder.
      * @param configuratorClassName Configurator (configuration wrapper) class name.
-     * @param constructorBodyBuilder Constructor body.
      * @param copyConstructorBodyBuilder Copy constructor body.
+     * @param configurationClassBuilder Configuration class builder.
+     * @param constructorBodyBuilder Constructor body.
      */
     private void createConstructors(
-        ClassName configClass,
-        String configName,
         TypeSpec.Builder configurationClassBuilder,
-        ParameterizedTypeName configuratorClassName,
-        CodeBlock.Builder constructorBodyBuilder,
-        CodeBlock.Builder copyConstructorBodyBuilder
+        CodeBlock.Builder constructorBodyBuilder
     ) {
         final MethodSpec constructorWithName = MethodSpec.constructorBuilder()
             .addModifiers(PUBLIC)
-            .addParameter(String.class, "prefix")
+            .addParameter(ParameterizedTypeName.get(List.class, String.class), "prefix")
             .addParameter(String.class, "key")
-            .addParameter(boolean.class, "isNamed")
-            .addParameter(configuratorClassName, "configurator")
-            .addParameter(DynamicConfiguration.class, "root")
-            .addStatement("super(prefix, key, isNamed, configurator, root)")
+            .addParameter(ParameterizedTypeName.get(ClassName.get(RootKey.class), WILDCARD), "rootKey")
+            .addParameter(ConfigurationChanger.class, "changer")
+            .addStatement("super(prefix, key, rootKey, changer)")
             .addCode(constructorBodyBuilder.build())
             .build();
         configurationClassBuilder.addMethod(constructorWithName);
-
-        final MethodSpec copyConstructor = MethodSpec.constructorBuilder()
-            .addModifiers(PRIVATE)
-            .addParameter(configClass, "base")
-            .addParameter(DynamicConfiguration.class, "root")
-            .addStatement("super(base.prefix, base.key, base.isNamed, base.configurator, root)")
-            .addCode(copyConstructorBodyBuilder.build())
-            .build();
-        configurationClassBuilder.addMethod(copyConstructor);
-
-        final MethodSpec emptyConstructor = MethodSpec.constructorBuilder()
-            .addModifiers(PUBLIC)
-            .addParameter(configuratorClassName, "configurator")
-            .addStatement("this($S, $S, false, configurator, null)", "", configName)
-            .build();
-
-        configurationClassBuilder.addMethod(emptyConstructor);
-    }
-
-    /**
-     * Create selectors.
-     *
-     * @param packageForUtil Package to place selectors class to.
-     * @param flattenConfig List of configuration nodes.
-     */
-    private void createSelectorsClass(String packageForUtil, List<ConfigurationNode> flattenConfig) {
-        ClassName selectorsClassName = ClassName.get(packageForUtil, "Selectors");
-
-        final TypeSpec.Builder selectorsClass = TypeSpec.classBuilder(selectorsClassName)
-            .superclass(BaseSelectors.class)
-            .addModifiers(PUBLIC, FINAL);
-
-        final CodeBlock.Builder selectorsStaticBlockBuilder = CodeBlock.builder();
-        selectorsStaticBlockBuilder.addStatement("$T publicLookup = $T.publicLookup()", MethodHandles.Lookup.class, MethodHandles.class);
-
-        selectorsStaticBlockBuilder.beginControlFlow("try");
-
-        // For every configuration node create selector (based on a method call chain)
-        for (ConfigurationNode configNode : flattenConfig) {
-            String regex = "([a-z])([A-Z]+)";
-            String replacement = "$1_$2";
-
-            // Selector variable name (like LOCAL_BASELINE_AUTO_ADJUST_ENABLED)
-            final String varName = configNode.getName()
-                .replaceAll(regex, replacement)
-                .toUpperCase()
-                .replace(".", "_");
-
-            TypeName type = configNode.getType();
-
-            if (Utils.isNamedConfiguration(type))
-                type = Utils.unwrapNamedListConfigurationClass(type);
-
-            StringBuilder methodCall = new StringBuilder();
-
-            ConfigurationNode current = configNode;
-            ConfigurationNode root = null;
-            int namedCount = 0;
-
-            // Walk from node up to the root and create a method call chain
-            while (current != null) {
-                boolean isNamed = false;
-
-                if (Utils.isNamedConfiguration(current.getType())) {
-                    namedCount++;
-                    isNamed = true;
-                }
-
-                if (current.getParent() != null) {
-                    String newMethodCall = "." + current.getOriginalName() + "()";
-                    // if config is named, then create a call with name parameter
-                    if (isNamed)
-                        newMethodCall += ".get(name" + (namedCount - 1) + ")";
-
-                    methodCall.insert(0, newMethodCall);
-                } else
-                    root = current;
-
-                current = current.getParent();
-            }
-
-            TypeName selectorRec = Utils.getParameterized(ClassName.get(Selector.class), root.getType(), type, configNode.getView(), configNode.getInit(), configNode.getChange());
-
-            if (namedCount > 0) {
-                final MethodSpec.Builder builder = MethodSpec.methodBuilder(varName);
-
-                for (int i = 0; i < namedCount; i++) {
-                    builder.addParameter(String.class, "name" + i);
-                }
-
-                selectorsClass.addMethod(
-                    builder
-                        .returns(selectorRec)
-                        .addModifiers(PUBLIC, STATIC, FINAL)
-                        .addStatement("return (root) -> root$L", methodCall.toString())
-                        .build()
-                );
-
-                // Build a list of parameters for statement
-                List<Object> params = new ArrayList<>();
-                params.add(MethodHandle.class);
-                params.add(varName);
-                params.add(selectorsClassName);
-                params.add(varName);
-                params.add(MethodType.class);
-                params.add(Selector.class);
-
-                // For every named config in call chain -- add String (name) parameter
-                for (int i = 0; i < namedCount; i++) {
-                    params.add(String.class);
-                }
-
-                // Create a string for name parameters
-                final String nameStringParameters = IntStream.range(0, namedCount).mapToObj(i -> "$T.class").collect(Collectors.joining(","));
-
-                selectorsStaticBlockBuilder.addStatement("$T $L = publicLookup.findStatic($T.class, $S, $T.methodType($T.class, " + nameStringParameters + "))", params.toArray());
-
-                selectorsStaticBlockBuilder.addStatement("put($S, $L)", configNode.getName(), varName);
-            }
-            else {
-                selectorsClass.addField(
-                    FieldSpec.builder(selectorRec, varName)
-                        .addModifiers(PUBLIC, STATIC, FINAL)
-                        .initializer("(root) -> root$L", methodCall.toString())
-                        .build()
-                );
-                selectorsStaticBlockBuilder.addStatement("put($S, $L)", configNode.getName(), varName);
-            }
-        }
-
-        selectorsStaticBlockBuilder
-            .nextControlFlow("catch ($T e)", Exception.class)
-            .endControlFlow();
-
-        selectorsClass.addStaticBlock(selectorsStaticBlockBuilder.build());
-
-        JavaFile selectorsClassFile = JavaFile.builder(selectorsClassName.packageName(), selectorsClass.build()).build();
-        try {
-            selectorsClassFile.writeTo(filer);
-        }
-        catch (IOException e) {
-            throw new ProcessorException("Failed to write class: " + e.getMessage(), e);
-        }
-    }
-
-    /**
-     * Create keys class.
-     *
-     * @param packageForUtil Package to place keys class to.
-     * @param flattenConfig List of configuration nodes.
-     */
-    private void createKeysClass(String packageForUtil, List<ConfigurationNode> flattenConfig) {
-        final TypeSpec.Builder keysClass = TypeSpec.classBuilder("Keys").addModifiers(PUBLIC, FINAL);
-
-        for (ConfigurationNode node : flattenConfig) {
-            final String varName = node.getName().toUpperCase().replace(".", "_");
-            keysClass.addField(
-                FieldSpec.builder(String.class, varName)
-                    .addModifiers(PUBLIC, STATIC, FINAL)
-                    .initializer("$S", node.getName())
-                    .build()
-            );
-        }
-
-        JavaFile keysClassFile = JavaFile.builder(packageForUtil, keysClass.build()).build();
-        try {
-            keysClassFile.writeTo(filer);
-        } catch (IOException e) {
-            throw new ProcessorException("Failed to write class: " + e.getMessage(), e);
-        }
     }
 
     /**
      * Create VIEW, INIT and CHANGE classes and methods.
-     *
-     * @param packageName Configuration package name.
      * @param fields List of configuration fields.
      * @param schemaClassName Class name of schema.
      * @param configurationClassBuilder Configuration class builder.
      */
     private void createPojoBindings(
-        String packageName,
         List<VariableElement> fields,
         ClassName schemaClassName,
         TypeSpec.Builder configurationClassBuilder,
@@ -792,55 +522,16 @@ public class Processor extends AbstractProcessor {
 
         configurationInterfaceBuilder.addSuperinterface(confTreeParameterized);
 
-        try {
-            viewClassGenerator.create(packageName, viewClassTypeName, fields);
-            final MethodSpec toViewMethod = createToViewMethod(viewClassTypeName, fields);
-            configurationClassBuilder.addMethod(toViewMethod);
-        }
-        catch (IOException e) {
-            throw new ProcessorException("Failed to write class " + viewClassTypeName.toString(), e);
-        }
-
-        try {
-            changeClassGenerator.create(packageName, changeClassName, fields);
-            final MethodSpec changeMethod = createChangeMethod(changeClassName, fields);
-            configurationClassBuilder.addMethod(changeMethod);
-        }
-        catch (IOException e) {
-            throw new ProcessorException("Failed to write class " + changeClassName.toString(), e);
-        }
-
-        try {
-            initClassGenerator.create(packageName, initClassName, fields);
-            final MethodSpec initMethod = createInitMethod(initClassName, fields);
-            configurationClassBuilder.addMethod(initMethod);
-        }
-        catch (IOException e) {
-            throw new ProcessorException("Failed to write class " + initClassName.toString(), e);
-        }
-
         // This code will be refactored in the future. Right now I don't want to entangle it with existing code
         // generation. It has only a few considerable problems - hardcode and a lack of proper arrays handling.
         // Clone method should be used to guarantee data integrity.
-        ClassName viewClsName = ClassName.get(
-            schemaClassName.packageName(),
-            schemaClassName.simpleName().replace("ConfigurationSchema", "View")
-        );
+        ClassName viewClsName = Utils.getViewName(schemaClassName);
 
-        ClassName changeClsName = ClassName.get(
-            schemaClassName.packageName(),
-            schemaClassName.simpleName().replace("ConfigurationSchema", "Change")
-        );
+        ClassName changeClsName = Utils.getChangeName(schemaClassName);
 
-        ClassName initClsName = ClassName.get(
-            schemaClassName.packageName(),
-            schemaClassName.simpleName().replace("ConfigurationSchema", "Init")
-        );
+        ClassName initClsName = Utils.getInitName(schemaClassName);
 
-        ClassName nodeClsName = ClassName.get(
-            schemaClassName.packageName() + ".impl",
-            schemaClassName.simpleName().replace("ConfigurationSchema", "Node")
-        );
+        ClassName nodeClsName = Utils.getNodeName(schemaClassName);
 
         TypeSpec.Builder viewClsBuilder = TypeSpec.interfaceBuilder(viewClsName)
             .addModifiers(PUBLIC);
@@ -858,70 +549,89 @@ public class Processor extends AbstractProcessor {
             .addSuperinterface(changeClsName)
             .addSuperinterface(initClsName);
 
+        TypeVariableName t = TypeVariableName.get("T");
+
         MethodSpec.Builder traverseChildrenBuilder = MethodSpec.methodBuilder("traverseChildren")
             .addAnnotation(Override.class)
             .addJavadoc("{@inheritDoc}")
             .addModifiers(PUBLIC)
+            .addTypeVariable(t)
             .returns(TypeName.VOID)
-            .addParameter(ClassName.get(ConfigurationVisitor.class), "visitor");
+            .addParameter(ParameterizedTypeName.get(ClassName.get(ConfigurationVisitor.class), t), "visitor");
 
         MethodSpec.Builder traverseChildBuilder = MethodSpec.methodBuilder("traverseChild")
             .addAnnotation(Override.class)
             .addJavadoc("{@inheritDoc}")
             .addModifiers(PUBLIC)
-            .returns(TypeName.VOID)
+            .addTypeVariable(t)
+            .returns(t)
             .addException(NoSuchElementException.class)
             .addParameter(ClassName.get(String.class), "key")
-            .addParameter(ClassName.get(ConfigurationVisitor.class), "visitor")
+            .addParameter(ParameterizedTypeName.get(ClassName.get(ConfigurationVisitor.class), t), "visitor")
+            .beginControlFlow("switch (key)");
+
+        MethodSpec.Builder constructBuilder = MethodSpec.methodBuilder("construct")
+            .addAnnotation(Override.class)
+            .addJavadoc("{@inheritDoc}")
+            .addModifiers(PUBLIC)
+            .returns(TypeName.VOID)
+            .addParameter(ClassName.get(String.class), "key")
+            .addParameter(ClassName.get(ConfigurationSource.class), "src")
             .beginControlFlow("switch (key)");
 
         ClassName consumerClsName = ClassName.get(Consumer.class);
 
         for (VariableElement field : fields) {
             Value valAnnotation = field.getAnnotation(Value.class);
-            boolean immutable = valAnnotation != null && valAnnotation.immutable();
+            boolean mutable = valAnnotation == null || !valAnnotation.immutable();
 
             String fieldName = field.getSimpleName().toString();
             TypeName schemaFieldType = TypeName.get(field.asType());
 
-            boolean leafField = schemaFieldType.isPrimitive() || !((ClassName)schemaFieldType).simpleName().contains("ConfigurationSchema");
+            boolean isArray = schemaFieldType instanceof ArrayTypeName;
+
+            boolean leafField = isPrimitiveOrArrayOfPrimitives(schemaFieldType)
+                || !((ClassName)schemaFieldType).simpleName().contains("ConfigurationSchema");
+
             boolean namedListField = field.getAnnotation(NamedConfigValue.class) != null;
 
-            TypeName viewFieldType = schemaFieldType.isPrimitive() ? schemaFieldType : ClassName.get(
+            TypeName viewFieldType = leafField ? schemaFieldType : ClassName.get(
                 ((ClassName)schemaFieldType).packageName(),
                 ((ClassName)schemaFieldType).simpleName().replace("ConfigurationSchema", "View")
             );
 
-            TypeName changeFieldType = schemaFieldType.isPrimitive() ? schemaFieldType : ClassName.get(
+            TypeName changeFieldType = leafField ? schemaFieldType : ClassName.get(
                 ((ClassName)schemaFieldType).packageName(),
                 ((ClassName)schemaFieldType).simpleName().replace("ConfigurationSchema", "Change")
             );
 
-            TypeName initFieldType = schemaFieldType.isPrimitive() ? schemaFieldType : ClassName.get(
+            TypeName initFieldType = leafField ? schemaFieldType : ClassName.get(
                 ((ClassName)schemaFieldType).packageName(),
                 ((ClassName)schemaFieldType).simpleName().replace("ConfigurationSchema", "Init")
             );
 
-            TypeName nodeFieldType = schemaFieldType.isPrimitive() ? schemaFieldType.box() : ClassName.get(
+            TypeName nodeFieldType = leafField ? schemaFieldType.box() : ClassName.get(
                 ((ClassName)schemaFieldType).packageName() + (leafField ? "" : ".impl"),
                 ((ClassName)schemaFieldType).simpleName().replace("ConfigurationSchema", "Node")
             );
 
+            TypeName namedListParamType = nodeFieldType;
+
             if (namedListField) {
                 viewFieldType = ParameterizedTypeName.get(ClassName.get(NamedListView.class), WildcardTypeName.subtypeOf(viewFieldType));
 
-                changeFieldType = ParameterizedTypeName.get(ClassName.get(NamedListChange.class), changeFieldType);
-
-                initFieldType = ParameterizedTypeName.get(ClassName.get(NamedListChange.class), initFieldType);
-
                 nodeFieldType = ParameterizedTypeName.get(ClassName.get(NamedListNode.class), nodeFieldType);
+
+                changeFieldType = ParameterizedTypeName.get(ClassName.get(NamedListChange.class), changeFieldType, initFieldType);
+
+                initFieldType = ParameterizedTypeName.get(ClassName.get(NamedListInit.class), initFieldType);
             }
 
             {
                 FieldSpec.Builder nodeFieldBuilder = FieldSpec.builder(nodeFieldType, fieldName, PRIVATE);
 
                 if (namedListField)
-                    nodeFieldBuilder.initializer("new $T<>($T::new)", NamedListNode.class, ((ParameterizedTypeName)nodeFieldType).typeArguments.get(0));
+                    nodeFieldBuilder.initializer("new $T<>($T::new)", NamedListNode.class, namedListParamType);
 
                 nodeClsBuilder.addField(nodeFieldBuilder.build());
             }
@@ -936,17 +646,24 @@ public class Processor extends AbstractProcessor {
                 }
 
                 {
+                    CodeBlock getStatement;
+
+                    if (isArray)
+                        getStatement = CodeBlock.builder().add("return $L.clone()", fieldName).build();
+                    else
+                        getStatement = CodeBlock.builder().add("return $L", fieldName).build();
+
                     MethodSpec.Builder nodeGetMtdBuilder = MethodSpec.methodBuilder(fieldName)
                         .addAnnotation(Override.class)
                         .addModifiers(PUBLIC)
                         .returns(leafField ? viewFieldType : nodeFieldType)
-                        .addStatement("return $L", fieldName); //TODO Explicit null check?
+                        .addStatement(getStatement);
 
                     nodeClsBuilder.addMethod(nodeGetMtdBuilder.build());
                 }
             }
 
-            if (!immutable) {
+            if (mutable) {
                 String changeMtdName = "change" + capitalize(fieldName);
 
                 {
@@ -969,9 +686,16 @@ public class Processor extends AbstractProcessor {
                         .returns(nodeClsName);
 
                     if (valAnnotation != null) {
+                        CodeBlock changeStatement;
+
+                        if (isArray)
+                            changeStatement = CodeBlock.builder().add("this.$L = $L.clone()", fieldName, fieldName).build();
+                        else
+                            changeStatement = CodeBlock.builder().add("this.$L = $L", fieldName, fieldName).build();
+
                         nodeChangeMtdBuilder
                             .addParameter(changeFieldType, fieldName)
-                            .addStatement("this.$L = $L", fieldName, fieldName);
+                            .addStatement(changeStatement);
                     }
                     else {
                         String paramName = fieldName + "Consumer";
@@ -979,11 +703,10 @@ public class Processor extends AbstractProcessor {
 
                         if (!namedListField) {
                             nodeChangeMtdBuilder.addStatement(
-                                "$L = $L == null ? new $T() : $L",
+                                "if ($L == null) $L = new $T()",
                                 fieldName,
                                 fieldName,
-                                nodeFieldType,
-                                fieldName
+                                nodeFieldType
                             );
                             nodeChangeMtdBuilder.addStatement("$L.accept($L)", paramName, fieldName);
                         }
@@ -1027,9 +750,16 @@ public class Processor extends AbstractProcessor {
                         .returns(nodeClsName);
 
                     if (valAnnotation != null) {
+                        CodeBlock initStatement;
+
+                        if (isArray)
+                            initStatement = CodeBlock.builder().add("this.$L = $L.clone()", fieldName, fieldName).build();
+                        else
+                            initStatement = CodeBlock.builder().add("this.$L = $L", fieldName, fieldName).build();
+
                         nodeInitMtdBuilder
                             .addParameter(initFieldType, fieldName)
-                            .addStatement("this.$L = $L", fieldName, fieldName);
+                            .addStatement(initStatement);
                     }
                     else {
                         String paramName = fieldName + "Consumer";
@@ -1037,11 +767,10 @@ public class Processor extends AbstractProcessor {
 
                         if (!namedListField) {
                             nodeInitMtdBuilder.addStatement(
-                                "$L = $L == null ? new $T() : $L",
+                                "if ($L == null) $L = new $T()",
                                 fieldName,
                                 fieldName,
-                                nodeFieldType,
-                                fieldName
+                                nodeFieldType
                             );
 
                             nodeInitMtdBuilder.addStatement("$L.accept($L)", paramName, fieldName);
@@ -1068,21 +797,63 @@ public class Processor extends AbstractProcessor {
                     traverseChildrenBuilder.addStatement("visitor.visitLeafNode($S, $L)", fieldName, fieldName);
 
                     traverseChildBuilder
-                        .addStatement("case $S: visitor.visitLeafNode($S, $L)", fieldName, fieldName, fieldName)
-                        .addStatement(INDENT + "break");
+                        .addStatement("case $S: return visitor.visitLeafNode(key, $L)", fieldName, fieldName);
                 }
                 else if (namedListField) {
                     traverseChildrenBuilder.addStatement("visitor.visitNamedListNode($S, $L)", fieldName, fieldName);
 
                     traverseChildBuilder
-                        .addStatement("case $S: visitor.visitNamedListNode($S, $L)", fieldName, fieldName, fieldName)
-                        .addStatement(INDENT + "break");
+                        .addStatement("case $S: return visitor.visitNamedListNode(key, $L)", fieldName, fieldName);
                 }
                 else {
                     traverseChildrenBuilder.addStatement("visitor.visitInnerNode($S, $L)", fieldName, fieldName);
 
                     traverseChildBuilder
-                        .addStatement("case $S: visitor.visitInnerNode($S, $L)", fieldName, fieldName, fieldName)
+                        .addStatement("case $S: return visitor.visitInnerNode(key, $L)", fieldName, fieldName);
+                }
+            }
+
+            {
+                if (leafField) {
+                    constructBuilder.addStatement(
+                        "case $S: $L = src == null ? null : src.unwrap($T.class)",
+                        fieldName,
+                        fieldName,
+                        schemaFieldType.box()
+                    )
+                    .addStatement(INDENT + "break");
+                }
+                else if (namedListField) {
+                    constructBuilder
+                        .addStatement(
+                            "case $S: if (src == null) $L = new $T<>($T::new)",
+                            fieldName,
+                            fieldName,
+                            NamedListNode.class,
+                            namedListParamType
+                        )
+                        .addStatement(
+                            INDENT + "else src.descend($L = $L.copy())",
+                            fieldName,
+                            fieldName
+                        )
+                        .addStatement(INDENT + "break");
+                }
+                else {
+                    constructBuilder
+                        .addStatement(
+                            "case $S: if (src == null) $L = null",
+                            fieldName,
+                            fieldName
+                        )
+                        .addStatement(
+                            INDENT + "else src.descend($L = ($L == null ? new $T() : ($T)$L.copy()))",
+                            fieldName,
+                            fieldName,
+                            nodeFieldType,
+                            nodeFieldType,
+                            fieldName
+                        )
                         .addStatement(INDENT + "break");
                 }
             }
@@ -1092,32 +863,37 @@ public class Processor extends AbstractProcessor {
             .addStatement("default: throw new $T(key)", NoSuchElementException.class)
             .endControlFlow();
 
+        constructBuilder
+            .addStatement("default: throw new $T(key)", NoSuchElementException.class)
+            .endControlFlow();
+
         nodeClsBuilder
             .addMethod(traverseChildrenBuilder.build())
-            .addMethod(traverseChildBuilder.build());
+            .addMethod(traverseChildBuilder.build())
+            .addMethod(constructBuilder.build());
 
         TypeSpec viewCls = viewClsBuilder.build();
         TypeSpec changeCls = changeClsBuilder.build();
         TypeSpec initCls = initClsBuilder.build();
         TypeSpec nodeCls = nodeClsBuilder.build();
 
-        try {
-            buildClass(viewClsName, viewCls);
-            buildClass(changeClsName, changeCls);
-            buildClass(initClsName, initCls);
-            buildClass(nodeClsName, nodeCls);
-        }
-        catch (IOException e) {
-            throw new ProcessorException("Failed to generate classes", e);
-        }
+        buildClass(viewClsName.packageName(), viewCls);
+        buildClass(changeClsName.packageName(), changeCls);
+        buildClass(initClsName.packageName(), initCls);
+        buildClass(nodeClsName.packageName(), nodeCls);
     }
 
     /** */
-    private void buildClass(ClassName viewClsName, TypeSpec viewCls) throws IOException {
-        JavaFile.builder(viewClsName.packageName(), viewCls)
-            .indent(INDENT)
-            .build()
-            .writeTo(filer);
+    private void buildClass(String packageName, TypeSpec cls) {
+        try {
+            JavaFile.builder(packageName, cls)
+                .indent(INDENT)
+                .build()
+                .writeTo(filer);
+        }
+        catch (IOException e) {
+            throw new ProcessorException("Failed to generate class " + packageName + "." + cls.name, e);
+        }
     }
 
     /** */
@@ -1126,156 +902,33 @@ public class Processor extends AbstractProcessor {
     }
 
     /**
-     * Build configuration forest base on root configuration description and all processed configurations.
-     *
-     * @param root Root configuration description.
-     * @param props All configurations.
-     * @return All possible config trees.
+     * Checks whether TypeName is a primitive (or String) or an array of primitives (or Strings)
+     * @param typeName TypeName.
+     * @return {@code true} if type is primitive or array.
      */
-    private Set<ConfigurationNode> buildConfigForest(ConfigurationDescription root, Map<TypeName, ConfigurationDescription> props) {
-        Set<ConfigurationNode> res = new HashSet<>();
-        Deque<ConfigurationNode> propsStack = new LinkedList<>();
+    private boolean isPrimitiveOrArrayOfPrimitives(TypeName typeName) {
+        String type = typeName.toString();
 
-        ConfigurationNode rootNode = new ConfigurationNode(root.getType(), root.getName(), root.getName(), root.getView(), root.getInit(), root.getChange(), null);
+        if (typeName instanceof ArrayTypeName)
+            type = ((ArrayTypeName) typeName).componentType.toString();
 
-        propsStack.addFirst(rootNode);
+        switch (type) {
+            case "boolean":
+            case "int":
+            case "long":
+            case "double":
+            case "java.lang.String":
+                return true;
 
-        // Walk through the all fields of every node and build a tree of configuration (more like chain)
-        while (!propsStack.isEmpty()) {
-            final ConfigurationNode current = propsStack.pollFirst();
+            default:
+                return false;
 
-            // Get configuration type
-            TypeName type = current.getType();
-
-            if (Utils.isNamedConfiguration(type))
-                type = Utils.unwrapNamedListConfigurationClass(current.getType());
-
-            final ConfigurationDescription configDesc = props.get(type);
-
-            // Get fields of configuration
-            final List<ConfigurationElement> propertiesList = configDesc.getFields();
-
-            if (current.getName() != null && !current.getName().isEmpty())
-                // Add current node to result
-                res.add(current);
-
-            for (ConfigurationElement property : propertiesList) {
-                String qualifiedName = property.getName();
-
-                if (current.getName() != null && !current.getName().isEmpty())
-                    qualifiedName = current.getName() + "." + qualifiedName;
-
-                final ConfigurationNode newChainElement = new ConfigurationNode(
-                    property.getType(),
-                    qualifiedName,
-                    property.getName(),
-                    property.getView(),
-                    property.getInit(),
-                    property.getChange(),
-                    current
-                );
-
-                boolean isNamedConfig = false;
-                if (property.getType() instanceof ParameterizedTypeName) {
-                    final ParameterizedTypeName parameterized = (ParameterizedTypeName) property.getType();
-
-                    if (parameterized.rawType.equals(ClassName.get(NamedListConfiguration.class)))
-                        isNamedConfig = true;
-                }
-
-                if (props.containsKey(property.getType()) || isNamedConfig)
-                    // If it's not a leaf, add to stack
-                    propsStack.add(newChainElement);
-                else
-                    // otherwise, add to result
-                    res.add(newChainElement);
-
-            }
         }
-        return res;
-    }
-
-    /**
-     * Create {@link org.apache.ignite.configuration.ConfigurationProperty#value} method for configuration class.
-     *
-     * @param type VIEW method type.
-     * @param variables List of VIEW object's fields.
-     * @return toView() method.
-     */
-    public MethodSpec createToViewMethod(TypeName type, List<VariableElement> variables) {
-        String args = variables.stream()
-            .map(v -> v.getSimpleName().toString() + ".value()")
-            .collect(Collectors.joining(", "));
-
-        final CodeBlock returnBlock = CodeBlock.builder()
-            .add("return new $T($L)", type, args)
-            .build();
-
-        return MethodSpec.methodBuilder("value")
-            .addModifiers(PUBLIC)
-            .addAnnotation(Override.class)
-            .returns(type)
-            .addStatement(returnBlock)
-            .build();
-    }
-
-    /**
-     * Create {@link org.apache.ignite.configuration.internal.Modifier#init(Object)} method (accepts INIT object) for configuration class.
-     *
-     * @param type INIT method type.
-     * @param variables List of INIT object's fields.
-     * @return Init method.
-     */
-    public MethodSpec createInitMethod(TypeName type, List<VariableElement> variables) {
-        final CodeBlock.Builder builder = CodeBlock.builder();
-
-        for (VariableElement variable : variables) {
-            final String name = variable.getSimpleName().toString();
-            builder.beginControlFlow("if (initial.$L() != null)", name);
-            builder.addStatement("$L.init(initial.$L())", name, name);
-            builder.endControlFlow();
-        }
-
-        return MethodSpec.methodBuilder("init")
-            .addModifiers(PUBLIC)
-            .addAnnotation(Override.class)
-            .addParameter(type, "initial")
-            .addCode(builder.build())
-            .build();
-    }
-
-    /**
-     * Create {@link org.apache.ignite.configuration.internal.Modifier#change(Object)} method (accepts CHANGE object) for configuration class.
-     *
-     * @param type CHANGE method type.
-     * @param variables List of CHANGE object's fields.
-     * @return Change method.
-     */
-    public MethodSpec createChangeMethod(TypeName type, List<VariableElement> variables) {
-        final CodeBlock.Builder builder = CodeBlock.builder();
-
-        for (VariableElement variable : variables) {
-            final Value valueAnnotation = variable.getAnnotation(Value.class);
-            if (valueAnnotation != null && valueAnnotation.immutable())
-                continue;
-
-            final String name = variable.getSimpleName().toString();
-            builder.beginControlFlow("if (changes.$L() != null)", name);
-            builder.addStatement("$L.changeWithoutValidation(changes.$L())", name, name);
-            builder.endControlFlow();
-        }
-
-        return MethodSpec.methodBuilder("changeWithoutValidation")
-            .addModifiers(PUBLIC)
-            .addAnnotation(Override.class)
-            .addParameter(type, "changes")
-            .addCode(builder.build())
-            .build();
     }
 
     /** {@inheritDoc} */
     @Override public Set<String> getSupportedAnnotationTypes() {
-        return Collections.singleton(Config.class.getCanonicalName());
+        return Set.of(Config.class.getCanonicalName(), ConfigurationRoot.class.getCanonicalName());
     }
 
     /** {@inheritDoc} */
